resym_core/tests/snapshots/type_reconstruction__type_reconstruction_microsoft_access_specifiers-23.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
struct resym_test::NtdllRegression1 { /* Size=0xe8 */
  /* 0x0000 */ public: VOID (* KernelRoutine)(resym_test::_KAPC*, VOID (**)(PVOID, PVOID, PVOID), PVOID*, PVOID*, PVOID*);
  /* 0x0008 */ public: LONG (* MajorFunction[28])(resym_test::_DEVICE_OBJECT*, resym_test::_IRP*);
};
