resym_core/tests/snapshots/type_reconstruction__type_reconstruction_microsoft_access_specifiers-3.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---

struct resym_test::BitFieldsTest2 { /* Size=0x2 */
  /* 0x0000 */ public: UCHAR b1 : 3; /* BitPos=0 */
  /* 0x0000 */ UCHAR : 0; /* BitPos=3 */
  /* 0x0001 */ public: UCHAR b2 : 6; /* BitPos=0 */
  /* 0x0001 */ public: UCHAR b3 : 2; /* BitPos=6 */
};

